chore: add ErrorProne (#258)
* BROKE: Switch on ErrorProne, and Nullaway, and get to compile-clean (tests still br0ked)

* FAIL: WIP - testCompile passes, but some tests fail

* Build green

* Ready for merge?